# opgm

./: Cargo.toml  README.md
src/: cli.yml  constants.rs  lib.rs  main.rs  memory_manager.rs  task.rs  tools.rs  types.rs
src/compiler/: ast.rs  checker.rs  compiler.rs  error.rs  generator.rs  mod.rs  parser.rs  rewriter.rs
src/data/: info.rs  info_edges.rs  mod.rs  types.rs  view.rs
src/data/csr/: graph.rs  types.rs
src/data/multiple/: create.rs  graph.rs  types.rs
src/data/single/: create.rs  graph.rs  types.rs
src/data_graph/: data_graph.rs  display.rs  mm_read_iter.rs  mm_read_sqlite3.rs  mod.rs  view.rs
src/data_graph/multiple/: create.rs  graph.rs  mod.rs  types.rs
src/executor/: count.rs  decompress.rs  deprecated_join.rs  enumerate.rs  join.rs  match_characteristics.rs  mod.rs  super_row.rs  types.rs  util.rs  view.rs
src/executor/scan/: vertex_centric.rs
src/front_end/: ast.rs  checker.rs  codegen.rs  error.rs  grammar.pest  mod.rs  parser.rs  rewriter.rs  types.rs
src/memory_manager/: memory_manager.rs  mod.rs
src/old_executor/: count.rs  decompress.rs  enumerate.rs  join.rs  match_characteristics.rs  mod.rs  super_row.rs  view.rs
src/old_executor/scan/: mod.rs
src/old_planner/: decompose_stars.rs  join.rs  mod.rs  planner.rs  scan.rs  types.rs
src/pattern/: characteristic.rs  graph.rs  mod.rs  pattern_graph.rs
src/pattern_graph/: characteristic.rs  mod.rs  pattern_graph.rs
src/planner/: decompose_stars.rs  join.rs  mod.rs  old_types.rs  planner.rs  scan.rs
src/types/: constraints.rs  mod.rs
tests/: q02.rs
